--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
+    "easy-table": "^1.2.0",
+    "events": "^3.3.0",
+    "uuid": "^8.3.2",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/easy-table": "^1.2.0",
+    "@types/events": "^3.0.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
